objects/FSL_Recommendation__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detailed_Repair_Information__c</fullName>
        <label>Detailed Repair Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Service_Order_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Service Order Number</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Recommendations (New Service Order Number)</relationshipLabel>
        <relationshipName>Recommendations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_site_Labor_Time_for_Repair__c</fullName>
        <label>Estimated Repair Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Information__c</fullName>
        <label>Parts Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <label>Quote ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Rejection__c</fullName>
        <label>Reason for Rejection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Customer selling equipment</fullName>
                </value>
                <value>
                    <fullName>Unable to meet customer schedule</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Comments__c</fullName>
        <label>Rejection Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <label>Created on Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Ready for Quote</fullName>
                </value>
                <value>
                    <fullName>Request for Quote Sent</fullName>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Need Approval</fullName>
                </value>
                <value>
                    <fullName>Customer Follow Up - 1</fullName>
                </value>
                <value>
                    <fullName>Customer Follow Up - 2</fullName>
                </value>
                <value>
                    <fullName>Customer Follow Up - 30 Days</fullName>
                </value>
                <value>
                    <fullName>Quote Approved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>INCOMPLETE RFQ</fullName>
                </value>
                <value>
                    <fullName>QUOTE RECEIVED</fullName>
                </value>
                <value>
                    <fullName>PARTS RESEARCH</fullName>
                </value>
                <value>
                    <fullName>PARTS COMPLETE</fullName>
                </value>
                <value>
                    <fullName>FINAL REVIEW</fullName>
                </value>
                <value>
                    <fullName>READY FOR CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>CUSTOMER FOLLOW-UP</fullName>
                </value>
                <value>
                    <fullName>SECOND FOLLOW-UP</fullName>
                </value>
                <value>
                    <fullName>THIRD FOLLOW-UP</fullName>
                </value>
                <value>
                    <fullName>FINAL FOLLOW-UP</fullName>
                </value>
                <value>
                    <fullName>QUOTE ACCEPTED</fullName>
                </value>
                <value>
                    <fullName>QUOTE REJECTED</fullName>
                </value>
                <value>
                    <fullName>HOLD FOR SAMPLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Repair__c</fullName>
        <label>Type of Repair</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recommended with next PM</fullName>
                    <label>Recommended with next PM/Service</label>
                </value>
                <value>
                    <fullName>Recommended before next PM</fullName>
                    <label>Recommended before next PM/Service</label>
                </value>
                <value>
                    <fullName>Recommended Now - Emergency</fullName>
                </value>
                <value>
                    <fullName>ASAP</fullName>
                    <isActive>false</isActive>
                    <label>ASAP</label>
                </value>
                <value>
                    <fullName>PMR</fullName>
                    <isActive>false</isActive>
                    <label>PMR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recommendation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Urgency__c</columns>
        <columns>Type_of_Repair__c</columns>
        <columns>On_site_Labor_Time_for_Repair__c</columns>
        <columns>Detailed_Repair_Information__c</columns>
        <columns>Parts_Information__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Asset__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Recommendation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <recordTypes>
        <fullName>AdvancedUser</fullName>
        <active>true</active>
        <label>AdvancedUser</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_Progress_Recommendation</fullName>
        <active>true</active>
        <label>In Progress Recommendation</label>
    </recordTypes>
    <recordTypes>
        <fullName>MOVEX_In_Progress</fullName>
        <active>true</active>
        <label>MOVEX In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Recommendation</fullName>
        <active>true</active>
        <label>New Recommendation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Editable</fullName>
        <active>true</active>
        <label>Non Editable</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Detailed_Repair_Information_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( Detailed_Repair_Information__c ),
ISPICKVAL(  Status__c , &apos;Ready for Quote&apos;) )</errorConditionFormula>
        <errorDisplayField>Detailed_Repair_Information__c</errorDisplayField>
        <errorMessage>Please enter a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimated_Repair_Time_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( On_site_Labor_Time_for_Repair__c ),
ISPICKVAL(  Status__c , &apos;Ready for Quote&apos;) )</errorConditionFormula>
        <errorDisplayField>On_site_Labor_Time_for_Repair__c</errorDisplayField>
        <errorMessage>Please enter a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Rejection_Comments_Mandatory_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Rejection_Comments__c ), ISPICKVAL( Reason_for_Rejection__c , &apos;OTHER&apos;) )</errorConditionFormula>
        <errorMessage>Rejection Comments are mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_PM_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Service_Order__r.WorkType.Name  &lt;&gt; &quot;PM&quot; &amp;&amp; TEXT($User.ERP__c) = &apos;BMS&apos;</errorConditionFormula>
        <errorMessage>This feature is not yet available. Please file your observation through your normal process</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rejection_reason_is_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND($RecordType.Name=&quot;AdvancedUser&quot;, ISPICKVAL(Status__c,&apos;Rejected&apos;), ISPICKVAL(Reason_for_Rejection__c,&apos;&apos;) )</errorConditionFormula>
        <errorMessage>Rejection Reason is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_repair_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( Type_of_Repair__c ), 
ISPICKVAL(  Status__c , &apos;Ready for Quote&apos;) )</errorConditionFormula>
        <errorDisplayField>Type_of_Repair__c</errorDisplayField>
        <errorMessage>Please enter a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Urgency_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Urgency__c , &apos;&apos;),
ISPICKVAL( Status__c , &apos;Ready for Quote&apos;) )</errorConditionFormula>
        <errorDisplayField>Urgency__c</errorDisplayField>
        <errorMessage>Please enter a value.</errorMessage>
    </validationRules>
</CustomObject>